modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/ResourceWithEmptyReply.bal
package samples.parser.invalidSyntax;

import ballerina.lang.system;

@BasePath {value:"/samples"}
service SampleService {

  @GET{}
  @Path {value:"/resource"}
  resource sampleResource (message m) {
	reply;
  }
}
